--- a/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/src/org/sbml/testsuite/ui/resources/help/about-sts.html
+++ b/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/src/org/sbml/testsuite/ui/resources/help/about-sts.html
@@ -1,12 +1,13 @@
 <html>
 <head>
+<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 <title>About the Test Runner</title>
 </head>
 <style>
 body, table, div, p, dl {
     color: #332;
-    font-family: Lucida Sans, Tahoma, Helvetica, Arial, Sans, sans-serif;
-    font-size: 11px;
+    font-family: Helvetica, Arial, Sans, sans-serif;
+    font-size: 12px;
     font-weight: normal;
     line-height: 140%;
 }
@@ -49,11 +50,17 @@ figure {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+    display: block;
 }
 
 figcaption {
     text-align: center;
     font-style: italic;
+    clear: both;
+    display: block;
+    margin-top: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 img {
@@ -63,6 +70,7 @@ img {
 </style>
 
 <body>
+
 <h2 id="aboutthesbmltestrunner">About the SBML Test Runner</h2>
 
 <p>The <em>SBML Test Suite</em> is a conformance testing system for SBML, used to test the degree and correctness of SBML support provided in an SBML-compatible software package. The SBML Test Suite consists of (1) a collection of SBML models, each with associated simulated results where appropriate, and (2) the SBML Test Runner, for controlling applications to make them run through each test case in the suite.</p>
