--- a/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/src/org/sbml/testsuite/ui/resources/help/filters.html
+++ b/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/src/org/sbml/testsuite/ui/resources/help/filters.html
@@ -1,12 +1,13 @@
 <html>
 <head>
+<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 <title>Filters</title>
 </head>
 <style>
 body, table, div, p, dl {
     color: #332;
-    font-family: Lucida Sans, Tahoma, Helvetica, Arial, Sans, sans-serif;
-    font-size: 11px;
+    font-family: Helvetica, Arial, Sans, sans-serif;
+    font-size: 12px;
     font-weight: normal;
     line-height: 140%;
 }
@@ -49,11 +50,17 @@ figure {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+    display: block;
 }
 
 figcaption {
     text-align: center;
     font-style: italic;
+    clear: both;
+    display: block;
+    margin-top: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 img {
@@ -63,6 +70,7 @@ img {
 </style>
 
 <body>
+
 <h2 id="filters">Filters</h2>
 
 <p>It is often convenient to be able to limit the currently-displayed results to a chosen subset. The SBML Test Runner&#8217;s filter facility can be invoked from the menubar or the toolbar icon.</p>
