Mention packages too, not just unsupported tags.

--- a/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/src/org/sbml/testsuite/ui/resources/help/defining-wrappers.html
+++ b/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/src/org/sbml/testsuite/ui/resources/help/defining-wrappers.html
@@ -103,8 +103,8 @@ let you define one or more wrapper configurations.</p>
 <li><p>the path to the wrapper program on your computer</p></li>
 <li><p>the path to a directory where the Runner will find the application&#8217;s
  output from running each test case</p></li>
-<li><p>a list of component or test tags that the application is known to be
- unable to understand</p></li>
+<li><p>a list of packages and/or component or test tags that the application
+ is known to be unable to understand</p></li>
 <li><p>command-line arguments that should be passed to the wrapper</p></li>
 </ol>
 
