--- a/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/src/org/sbml/testsuite/ui/resources/help/preferences.html
+++ b/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/src/org/sbml/testsuite/ui/resources/help/preferences.html
@@ -65,6 +65,9 @@ figcaption {
 
 img {
     border: 1px solid gray;
+    -box-shadow: 5px 5px 5px #d0d0d0;
+    -moz-box-shadow: 5px 5px 5px #d0d0d0;
+    -webkit-box-shadow: 5px 5px 5px #d0d0d0;
 }
 
 </style>
@@ -79,11 +82,57 @@ img {
 
 
 
-<p>The first line, titled <em>Test Cases Directory</em>, will be automatically pre-configured with a path to a user data folder where the archive of test cases is unpacked. You should not need to change this value except in special circumstances.</p>
+<p>In the top portion of the panel, the first field titled <em>Test Cases
+Directory</em> will be automatically pre-configured with a path to a folder where
+the archive of SBML test cases is unpacked. You should not need to change
+this value except in special circumstances.</p>
 
-<p>The middle portion of the panel is concerned with the definition of wrappers. The list in the left-hand side permits you to define more than one wrapper; this can be useful, for example, if you are testing an application using different options, or testing different applications. The Add and Remove buttons enable you to manage the list of known wrappers. The list will be shown in a drop-down menu in the toolbar of the main SBML Test Runner window once you exit the Preferences dialog.</p>
+<p>The middle portion of the panel is concerned with the definition of wrappers.
+The list in the left-hand side permits you to define more than one wrapper;
+this can be useful, for example, if you are testing an application using
+different options, or testing different applications. This list is the same
+shown in the drop-down menu in the toolbar of the main SBML Test Runner
+window once you exit the Preferences dialog. The Add and Remove buttons
+below the list in this panel enable you to manage the list of known wrappers.
+The set of fields to the right of the list are the fields that let you define
+the characteristics of an individual wrapper. The meanings of these fields
+are described in a separate section of this help document titled <a href="defining-wrappers.html">Defining
+Wrappers</a>.</p>
 
-<p>The set of fields to the right of the list of wrappers are the ones that let you define the characteristics of an individual wrapper. The meanings of the fields are described in the section titled <a href="defining-wrappers.html">Defining Wrappers</a>.</p>
+<p>Note that the SBML Test Runner starts up with one pseudo-wrapper definition
+named &quot;<em>&#8211; no wrapper &#8211;</em>&quot;. This is a view-only wrapper that
+allows you to browse the test cases provided in the SBML Test Suite, and
+nothing more. The &quot;<em>&#8211; no wrapper &#8211;</em>&quot; pseudo-wrapper is always
+present and cannot be deleted or altered.</p>
 
-<p>The SBML Test Runner starts up with one pseudo-wrapper definition named &quot;<em>&#8211; no wrapper &#8211;</em>&quot;. This is a view-only wrapper that allows you to browse the test cases provided in the SBML Test Suite, and nothing more. The &quot;<em>&#8211; no wrapper &#8211;</em>&quot; pseudo-wrapper is always present and cannot be deleted or altered.</p>
+<p>The final section at the bottom of the Preferences panel contains some
+additional general options.</p>
+
+<ul>
+<li><p><strong>Delete existing output files before each invocation</strong>: When set (the
+ default value), this causes the SBML Test Runner to delete output results
+ files before invoking the wrapper on each test case. If the deletion
+ fails, it reports an error (as a &#8220;black&#8221; color in the results map). This
+ setting helps prevent situations in which an output file is locked by
+ another process (e.g., open in an Excel window on Windows) and the wrapper
+ does not return an error value when it tries to write to the file. In
+ that situation, the Test Runner would have no way of knowing that a
+ problem occurred and that the wrapper did not actually produce a new
+ result. (If the wrapper could be counted on to always return an error,
+ then there wouldn&#8217;t be a potential problem, but not all wrappers behave as
+ expected.) By attempting to delete the file first, the Test Runner can
+ detect a possible problem ahead of time and tell the user something is
+ wrong. However, if this behavior causes problems for your testing
+ scenario, you can turn off the behavior by unchecking this checkbox.</p></li>
+<li><p><strong>Explicitly set number of threads used</strong>: This option only has a meaning
+ when a wrapper definition has the <strong>Wrapper can be run in parallel</strong>
+ option turned on. When that option is set, the SBML Test Runner uses
+ multiple process threads to run multiple copies of the wrapper in
+ parallel. The number of threads is set to the number of CPU cores minus
+ one. If you prefer to change the number of threads used, set this
+ checkbox to true and supply a number in the associated text field.
+ (Warning: do not set the value to a very high number, or you may find your
+ computer becomes so burdened that the SBML Test Runner, or indeed the
+ entire computer, becomes sluggish or even stops responding.)</p></li>
+</ul>
 </body> </html>
