--- a/trunk/test-suite/src/front-ends/standalone/testsuite-ui/src/org/sbml/testsuite/ui/resources/help/basic-operation.html
+++ b/trunk/test-suite/src/front-ends/standalone/testsuite-ui/src/org/sbml/testsuite/ui/resources/help/basic-operation.html
@@ -82,9 +82,7 @@ img {
 <img src="first-time.png" alt="The first time you start the Test Runner." title="When you first start the SBML Test Runner, it will begin to unpack the SBML test cases it contains internally.  This may take some time, during which it will display a panel describing what it is doing." />
 <figcaption>The first time you start the Test Runner.</figcaption></figure>
 
-
-
-<p>After this initial unpacking of test cases, the system will not have to do that process again, unless you update the test cases using the Open option in the File menu or change the path to where the SBML Test Runner looks for the cases. The latter is determined by the <a href="preferences.html">Preferences panel</a>.</p>
+<p>After this initial unpacking of test cases, the system will not have to do that process again, unless the test cases are updated or replaced (which can happen either automatically via the network update facility, or manually using the Open option in the File menu). The Test Runner can be configured to check (or not check) for updates automatically by enabling the appropriate option in the <a href="preferences.html">Preferences panel</a>.</p>
 
 <p>The basic operation of the SBML Test Runner consists of running tests
 (or more precisely, running an SBML-aware application via a wrapper),
@@ -109,8 +107,6 @@ information about the current state of the SBML Test Runner</p></li>
 <figure>
 <img src="example-run.png" alt="Example of a run in progress." title="Example of a test run in progress." />
 <figcaption>Example of a run in progress.</figcaption></figure>
-
-
 
 <p>The status area in the bottom of the main window provides a real-time sense for the progress; you can also open a map view of the results (via the grid-shaped icon in the far left of the tool bar) and the map will be updated as the run continues. You can pause execution at any time by clicking on the double-bar-shaped &#8220;Pause&#8221; button that becomes visible while a run is in progress.</p>
 
