--- a/trunk/test-suite/src/front-ends/standalone/testsuite-ui/src/org/sbml/testsuite/ui/resources/help/preferences.html
+++ b/trunk/test-suite/src/front-ends/standalone/testsuite-ui/src/org/sbml/testsuite/ui/resources/help/preferences.html
@@ -80,8 +80,6 @@ img {
 <img src="preferences-screenshot.png" alt="Image of the Preferences panel." title="The Preferences panel." />
 <figcaption>Image of the Preferences panel.</figcaption></figure>
 
-
-
 <p>In the top portion of the panel, the first field titled <em>Test Cases
 Directory</em> will be automatically pre-configured with a path to a folder where
 the archive of SBML test cases is unpacked. You should not need to change
@@ -134,5 +132,13 @@ additional general options.</p>
  (Warning: do not set the value to a very high number, or you may find your
  computer becomes so burdened that the SBML Test Runner, or indeed the
  entire computer, becomes sluggish or even stops responding.)</p></li>
+<li><p><strong>Automatically check for new versions of test cases</strong>: When
+ enabled, this option causes the Test Runner to contact the network
+ update location and check for new versions of test cases. It will
+ do this once automatically when it is first started up.</p></li>
 </ul>
+
+<p>Whether the last option is enabled or not, you can always check for
+updates manually by using the &#8220;Check for Updates&#8230;&#8221; item in the Help
+menu.</p>
 </body> </html>
